--- a/charts/podiumd/templates/api-proxy-deployment.yaml
+++ b/charts/podiumd/templates/api-proxy-deployment.yaml
@@ -1,34 +1,31 @@
-{{- if .Values.apiproxy.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
+  name: {{ include "api-proxy.fullname" . }}
   labels:
-    app: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
+    app: {{ include "api-proxy.name" . }}
 spec:
   replicas: {{ .Values.apiproxy.replicaCount }}
   selector:
     matchLabels:
-      app: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
+      app: {{ include "api-proxy.name" . }}
   template:
     metadata:
       labels:
-        app: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
+        app: {{ include "api-proxy.name" . }}
     spec:
       containers:
       - name: nginx
         image: {{ .Values.apiproxy.image.repository }}:{{ .Values.apiproxy.image.tag }}
         ports:
-        - containerPort: {{ .Values.apiproxy.service.containerPort }}
+        - containerPort: 8080
           name: http
         volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/nginx.conf
           subPath: nginx.conf
-        {{- if .Values.apiproxy.nginxCertsSecret }}
         - name: nginx-certs
           mountPath: /etc/nginx/certs
-        {{- end }}
         resources:
           limits:
             cpu: {{ .Values.apiproxy.resources.limits.cpu }}
@@ -39,22 +36,19 @@ spec:
         livenessProbe:
           httpGet:
             path: /_health/
-            port: {{ .Values.apiproxy.service.containerPort }}
+            port: {{ .Values.apiproxy.service.port }}
           initialDelaySeconds: {{ .Values.apiproxy.livenessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.apiproxy.livenessProbe.periodSeconds }}
         readinessProbe:
           httpGet:
             path: /_health/
-            port: {{ .Values.apiproxy.service.containerPort }}
+            port: {{ .Values.apiproxy.service.port }}
           initialDelaySeconds: {{ .Values.apiproxy.readinessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.apiproxy.readinessProbe.periodSeconds }}
       volumes:
       - name: nginx-config
         configMap:
-          name: {{ default "api-proxy" .Values.apiproxy.nameOverride }}-nginx-config
-      {{- if .Values.apiproxy.nginxCertsSecret }}
+          name: {{ include "api-proxy.fullname" . }}-nginx-config
       - name: nginx-certs
         secret:
           secretName: {{ .Values.apiproxy.nginxCertsSecret }}
-      {{- end }}
-{{- end }}
