--- a/charts/podiumd/templates/api-proxy-configmap.yaml
+++ b/charts/podiumd/templates/api-proxy-configmap.yaml
@@ -36,10 +36,10 @@ data:
           proxy_ssl_trusted_certificate /etc/nginx/certs/ca.crt;
           
           proxy_pass {{ .Values.apiproxy.locations.bag.targetUrl }};
-          proxy_ssl_verify {{ .Values.locations.bag.sslVerify }};
+          proxy_ssl_verify {{ .Values.apiproxy.locations.bag.sslVerify }};
           proxy_ssl_session_reuse on;
           proxy_ssl_server_name on;
-          proxy_set_header Host {{ .Values.locations.bag.hostHeader }};
+          proxy_set_header Host {{ .Values.apiproxy.locations.bag.hostHeader }};
           proxy_http_version 1.1;
         }
         
@@ -50,10 +50,10 @@ data:
           proxy_ssl_trusted_certificate /etc/nginx/certs/ca.crt;
           
           proxy_pass {{ .Values.apiproxy.locations.brp.targetUrl }};
-          proxy_ssl_verify {{ .Values.locations.brp.sslVerify }};
+          proxy_ssl_verify {{ .Values.apiproxy.locations.brp.sslVerify }};
           proxy_ssl_session_reuse on;
           proxy_ssl_server_name on;
-          proxy_set_header Host {{ .Values.locations.brp.hostHeader }};
+          proxy_set_header Host {{ .Values.apiproxy.locations.brp.hostHeader }};
           proxy_http_version 1.1;
         }
         
