--- a/charts/podiumd/templates/api-proxy-configmap.yaml
+++ b/charts/podiumd/templates/api-proxy-configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "api-proxy.fullname" . }}-nginx-config
+  name: {{ default "api-proxy" .Values.apiproxy.nameOverride }}-nginx-config
 data:
-  nginx.conf: |-
+  nginx.conf: |
     user nginx;
     worker_processes auto;
     error_log /var/log/nginx/error.log notice;
