--- a/charts/podiumd/templates/api-proxy-service.yaml
+++ b/charts/podiumd/templates/api-proxy-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "api-proxy.fullname" . }}
+  name: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
 spec:
   selector:
-    app: {{ include "api-proxy.name" . }}
+    app: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
   ports:
   - port: {{ .Values.apiproxy.service.port }}
     targetPort: http
