--- a/charts/podiumd/templates/api-proxy-configmap.yaml
+++ b/charts/podiumd/templates/api-proxy-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.apiproxy.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -106,3 +107,4 @@ data:
         }
       }
     }
+{{- end }}
