--- a/charts/monitoring-logging/loki/logging-PodiumD-configmap.yaml
+++ b/charts/monitoring-logging/loki/logging-PodiumD-configmap.yaml
@@ -691,7 +691,7 @@ data:
             "h": 11,
             "w": 12,
             "x": 0,
-            "y": 41
+            "y": 60
           },
           "id": 62,
           "options": {
@@ -849,7 +849,7 @@ data:
             "h": 11,
             "w": 12,
             "x": 12,
-            "y": 41
+            "y": 60
           },
           "id": 66,
           "options": {
@@ -945,6 +945,16 @@ data:
                       "fixedColor": "semi-dark-green",
                       "mode": "fixed"
                     }
+                  },
+                  {
+                    "id": "links",
+                    "value": [
+                      {
+                        "targetBlank": true,
+                        "title": "",
+                        "url": "https://test-podiumd-logs.rotterdam.nl/goto/PyIsGR0HR?orgId=1"
+                      }
+                    ]
                   }
                 ]
               },
@@ -963,7 +973,13 @@ data:
                   },
                   {
                     "id": "links",
-                    "value": []
+                    "value": [
+                      {
+                        "targetBlank": true,
+                        "title": "",
+                        "url": "https://test-podiumd-logs.rotterdam.nl/goto/jrIEMR0Ng?orgId=1"
+                      }
+                    ]
                   }
                 ]
               },
@@ -982,7 +998,13 @@ data:
                   },
                   {
                     "id": "links",
-                    "value": []
+                    "value": [
+                      {
+                        "targetBlank": true,
+                        "title": "",
+                        "url": "https://test-podiumd-logs.rotterdam.nl/goto/wge2Gg0Ng?orgId=1"
+                      }
+                    ]
                   }
                 ]
               },
@@ -1001,7 +1023,13 @@ data:
                   },
                   {
                     "id": "links",
-                    "value": []
+                    "value": [
+                      {
+                        "targetBlank": true,
+                        "title": "",
+                        "url": "https://test-podiumd-logs.rotterdam.nl/goto/sdapMRANg?orgId=1"
+                      }
+                    ]
                   }
                 ]
               }
@@ -1011,7 +1039,7 @@ data:
             "h": 12,
             "w": 12,
             "x": 0,
-            "y": 52
+            "y": 71
           },
           "id": 72,
           "options": {
@@ -1049,7 +1077,7 @@ data:
                 "uid": "loki"
               },
               "editorMode": "code",
-              "expr": "sum(count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 5[0-9]{2}\" |~ \"(?i)$search\" |~ \"(?i)$LogLevel\" |~ \"(?i)$Methode\" [$__interval]))",
+              "expr": "sum(count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 5[0-9]{2}\" [$__interval]))",
               "legendFormat": "HTTP5x (Kritisch)",
               "queryType": "range",
               "refId": "A"
@@ -1060,7 +1088,7 @@ data:
                 "uid": "loki"
               },
               "editorMode": "code",
-              "expr": "sum(count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 4[0-9]{2}\" |~ \"(?i)$search\" |~ \"(?i)$LogLevel\" |~ \"(?i)$Methode\" [$__interval]))",
+              "expr": "sum(count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 4[0-9]{2}\" [$__interval]))",
               "hide": false,
               "legendFormat": "HTTP4x (Error)",
               "queryType": "range",
@@ -1072,7 +1100,7 @@ data:
                 "uid": "loki"
               },
               "editorMode": "code",
-              "expr": "sum(count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 3[0-9]{2}\" |~ \"(?i)$search\" |~ \"(?i)$LogLevel\" |~ \"(?i)$Methode\" [$__interval]))",
+              "expr": "sum(count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 3[0-9]{2}\" [$__interval]))",
               "hide": false,
               "legendFormat": "HTTP3x (Redirect)",
               "queryType": "range",
@@ -1084,7 +1112,7 @@ data:
                 "uid": "loki"
               },
               "editorMode": "code",
-              "expr": "sum(\r\n  count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 2[0-9]{2}\" |~ \"(?i)$search\" |~ \"(?i)$LogLevel\" |~ \"(?i)$Methode\"[$__interval]))",
+              "expr": "sum(\r\n  count_over_time({app=~\"$Subapp\"} |~ \"HTTP/1.1\\\" 2[0-9]{2}\" [$__interval]))",
               "hide": false,
               "legendFormat": "HTTP2x (Succes)",
               "queryType": "range",
@@ -1188,7 +1216,7 @@ data:
             "h": 12,
             "w": 12,
             "x": 12,
-            "y": 52
+            "y": 71
           },
           "id": 67,
           "options": {
@@ -1238,7 +1266,7 @@ data:
       "type": "row"
     },
     {
-      "collapsed": false,
+      "collapsed": true,
       "gridPos": {
         "h": 1,
         "w": 24,
@@ -1246,54 +1274,55 @@ data:
         "y": 11
       },
       "id": 4,
-      "panels": [],
-      "title": "Alle logs",
-      "type": "row"
-    },
-    {
-      "datasource": {
-        "type": "loki",
-        "uid": "P8E80F9AEF21F6940"
-      },
-      "description": "",
-      "fieldConfig": {
-        "defaults": {},
-        "overrides": []
-      },
-      "gridPos": {
-        "h": 19,
-        "w": 24,
-        "x": 0,
-        "y": 12
-      },
-      "id": 68,
-      "options": {
-        "dedupStrategy": "none",
-        "enableLogDetails": true,
-        "prettifyLogMessage": true,
-        "showCommonLabels": false,
-        "showLabels": false,
-        "showTime": true,
-        "sortOrder": "Descending",
-        "wrapLogMessage": true
-      },
-      "pluginVersion": "11.3.0",
-      "targets": [
+      "panels": [
         {
           "datasource": {
             "type": "loki",
-            "uid": "loki"
+            "uid": "P8E80F9AEF21F6940"
           },
-          "direction": "backward",
-          "editorMode": "code",
-          "expr": "{app=~\"$Subapp\"}  |~ \"(?i)$search\" |~ \"(?i)$Methode\" |~ \"(?i)$LogLevel\" !~ `$excluded_log_levels` != `HTTP/1.1\" 0 \"`",
-          "maxLines": 100,
-          "queryType": "range",
-          "refId": "A"
+          "description": "",
+          "fieldConfig": {
+            "defaults": {},
+            "overrides": []
+          },
+          "gridPos": {
+            "h": 19,
+            "w": 24,
+            "x": 0,
+            "y": 12
+          },
+          "id": 68,
+          "options": {
+            "dedupStrategy": "none",
+            "enableLogDetails": true,
+            "prettifyLogMessage": true,
+            "showCommonLabels": false,
+            "showLabels": false,
+            "showTime": true,
+            "sortOrder": "Descending",
+            "wrapLogMessage": true
+          },
+          "pluginVersion": "11.3.0",
+          "targets": [
+            {
+              "datasource": {
+                "type": "loki",
+                "uid": "loki"
+              },
+              "direction": "backward",
+              "editorMode": "code",
+              "expr": "{app=~\"$Subapp\"}  |~ \"(?i)$search\" |~ \"(?i)$Methode\" |~ \"(?i)$LogLevel\" !~ `$excluded_log_levels` != `HTTP/1.1\" 0 \"`",
+              "maxLines": 100,
+              "queryType": "range",
+              "refId": "A"
+            }
+          ],
+          "title": "Logs component: $App",
+          "type": "logs"
         }
       ],
-      "title": "Logs component: $App",
-      "type": "logs"
+      "title": "Alle logs voor component: \"$App\"",
+      "type": "row"
     },
     {
       "collapsed": true,
@@ -1301,7 +1330,7 @@ data:
         "h": 1,
         "w": 24,
         "x": 0,
-        "y": 31
+        "y": 12
       },
       "id": 71,
       "panels": [
@@ -1319,7 +1348,7 @@ data:
             "h": 19,
             "w": 24,
             "x": 0,
-            "y": 323
+            "y": 104
           },
           "id": 70,
           "options": {
@@ -1352,7 +1381,7 @@ data:
           "type": "logs"
         }
       ],
-      "title": "Logs met ALLEEN een HTTP code",
+      "title": "Logs met ALLEEN een HTTP code. Gekozen HTTP code: \"$http_code\"",
       "type": "row"
     },
     {
@@ -1361,7 +1390,7 @@ data:
         "h": 1,
         "w": 24,
         "x": 0,
-        "y": 32
+        "y": 13
       },
       "id": 52,
       "panels": [
@@ -1387,7 +1416,7 @@ data:
             "h": 13,
             "w": 24,
             "x": 0,
-            "y": 449
+            "y": 124
           },
           "id": 51,
           "options": {
@@ -1428,7 +1457,7 @@ data:
         "h": 1,
         "w": 24,
         "x": 0,
-        "y": 33
+        "y": 14
       },
       "id": 64,
       "panels": [
@@ -1452,7 +1481,7 @@ data:
             "h": 11,
             "w": 24,
             "x": 0,
-            "y": 401
+            "y": 87
           },
           "id": 63,
           "options": {
@@ -1748,8 +1777,8 @@ data:
       },
       {
         "current": {
-          "text": "err",
-          "value": "err"
+          "text": "",
+          "value": ""
         },
         "description": "Vul hier je zoekwoord in. Voorbeeld: formulier",
         "label": "Zoeken",
@@ -1757,11 +1786,11 @@ data:
         "options": [
           {
             "selected": true,
-            "text": "err",
-            "value": "err"
+            "text": "",
+            "value": ""
           }
         ],
-        "query": "err",
+        "query": "",
         "type": "textbox"
       },
       {
@@ -1873,6 +1902,6 @@ data:
   "timezone": "",
   "title": "Monitoring en logging PodiumD",
   "uid": "e970a83d-adc2-4d33-af93-2349c0b77e5",
-  "version": 189,
+  "version": 193,
   "weekStart": ""
 }
