--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -89,7 +89,7 @@ prometheus:
   prometheusSpec:
     logLevel: warn
     serviceMonitorSelectorNilUsesHelmValues: false
-    retention: 72h
+    retention: 7d # 7 days retention
 
   alertmanager:
     enabled: false
@@ -150,8 +150,8 @@ loki:
   limits_config:
     allow_structured_metadata: true
     volume_enabled: true
-    retention_period: 744h # 1 month retention
-    max_query_lookback: 744h # 1 month
+    retention_period: 90d # 3 months retention
+    max_query_lookback: 90d # 3 months
     ingestion_rate_strategy: local # Default: global
     max_global_streams_per_user: 5000
     max_query_length: 744h # 1 month. Default: 721h
