--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -233,7 +233,7 @@ chunksCache:
   
 monitoring:
   selfMonitoring:
-    enabled: true
+    enabled: false
     grafanaAgent:
       installOperator: false
   dashboards:
